K8s/gcloud/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urban-aura
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: urban-aura
  template:
    metadata:
      labels:
        app: urban-aura
    spec:
      containers:
      - name: urban-aura
        image: tarunbhardwajdeveloper/urban-aura:v1
        resources:
          requests:
            memory: "500Mi"
            cpu: "1"
          limits:
            memory: "500Mi"
            cpu: "1"
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
