K8s/gcloud/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: urban-aura-svc
  namespace: dev
spec:
  selector:
    app: urban-aura
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: urban-aura-np-svc
  namespace: dev
spec:
  type: NodePort
  selector:
    app: urban-aura
  ports:
  - port: 80
    targetPort: 80
